# Next_id_app

./: .gitignore  Dockerfile  README.md  Vagrantfile  bootstrap.sh  compile.sh  database.db  docker-compose.yml  nextid  nextid.sh  settings.gradle  setup.sh
Client/Android_socket_client_ui/app/: build.gradle
Client/Android_socket_client_ui/app/src/androidTest/java/com/deko/socket_client_ui/: ExampleInstrumentedTest.java
Client/Android_socket_client_ui/app/src/main/: AndroidManifest.xml
Client/Android_socket_client_ui/app/src/main/java/com/brulex/socket_client_ui/: MainActivity.java
Client/Android_socket_client_ui/app/src/main/res/layout/: activity_main.xml
Client/Android_socket_client_ui/app/src/main/res/values/: strings.xml
Client/Android_socket_client_ui/app/src/test/java/com/brulex/socket_client_ui/: ExampleUnitTest.java
Client/Simple_Socket_Client_via_C++(Qt)/: Client.pro  client.cpp  client.h  main.cpp
Client/Simple_Socket_Client_via_Java/src/: Client.java
Server/Docker/: docker-compose.yml
Server/Server via C++(Qt)/: CMakeLists.txt  Makefile  Server  Server.pro  main.cpp
Server/Server via JAVA/: build.gradle
Server/Server via JAVA/src/main/java/: DB.java  ServerThr.java
Server/Vagrant/: compile.sh  setup.sh
src/main/java/: DB.java  Server.java  ServerThr.java
